# prynt3d

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/3dprynt/: connector.py
src/prynt3d/: __main__.py
